--- a/HomeWork.html
+++ b/HomeWork.html
@@ -29,7 +29,7 @@
 	<main>
 
 		<section class="page-font top-magrin" >
-			<p>У нас можно покликать по интересным ссылкам:</p>
+			<p class="p-size-intersting-link">У нас можно покликать по интересным ссылкам:</p>
 				<ol>
 					<li><a href="#" class="section-li-font-size">интересная ссылка #1</a>.</li>
 					<li><a href="#" class="section-li-font-size">интересная ссылка #2</a>.</li>
