My home work on 22 May 2019

--- a/index.html
+++ b/index.html
@@ -5,25 +5,31 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Главная</title>
 </head>
-
-<body>
-	<header class="font-size-family-heaght margin-top-right-bottom-left">
-		<nav class="nav-border nav-font-line-height">
+ 
+<body class="margin-body">
+	
+	<header class="header-margin-bottom">
+		<nav class="nav-border">
 			<ul>
-				<li><a href="#" class="text-decoration-none nav-li-letter-size">Главная</a></li>
+				<li><a href="#" class="text-decoration-none nav-li-letter-size nav-li-color-main">Главная</a></li>
 				<li><a href="#" class="text-decoration-none nav-li-letter-size">Страница#1</a></li>
 				<li><a href="#" class="text-decoration-none nav-li-letter-size">Страница#2</a></li>
 				<li><a href="#" class="text-decoration-none nav-li-letter-size">Аккаунт</a></li>
 				<li><a href="#" class="text-decoration-none nav-li-letter-size">Выйти</a></li>
 			</ul>
 		</nav>
-		<p class="header-magrin header-p-mergin">Привет, Незнакомец!</p>
-		<h1 class="header-magrin header-margin-h header-width-h">Добро Пожаловать на главную страницу</h1>
-		<img src="Images/welcome.jpg" alt="Sorry" class="header-magrin header-width-img" />
 	</header>
+	
+	<main class="main-padding-bottom q">
+		<div class="block-element">
+				
+		<section class="section-margin-main-left">
+			<p class="">Привет, Незнакомец!</p>
+			<h1 class="main-width-h">Добро Пожаловать на главную страницу</h1>
+			<img src="images/welcome.jpg" alt="Sorry" class="main-width-img" />
+		</section>
 
-	<main class="margin-top-right-bottom-left">
-		<section class="font-size-family-heaght main-section-magrin" >
+		<section class="font-size-family-heaght section-margin-main-left" >
 			<p class="section-p-li-font-size">У нас можно покликать по интересным ссылкам:</p>
 				<ol>
 					<li><a href="#" class="section-li-font-size">интересная ссылка #1</a>.</li>
@@ -35,21 +41,24 @@
 			<p class="main-text-indent main-text-space font-weight-p">Lorem Ipsum dolor sit amet consectetur adipiscing elit. Sed sit amet nisi libero. Donec ac aliquam eros. Pellentesque sodales conseuat nibh in porttitor. Maecenas quam est, tempro in lectus mattis, aliquet ullamcorper arcu. Quisque non condimentum enim.
 			Nullam in rhoncus lorem... <a href="https://www.lipsum.com/feed/html" class="text-decoration-none">Нажмите здесть чтобы узнать больше!</a></p>
 		</article>
+
+		</div>
 	</main>
-	
-	<footer class="footer-margin-bottom-size margin-top-right-bottom-left">
+
+		<footer class="">
 		<article class="font-size-family-heaght article-border-footer footer-article-font-size">
 			<form>
 				<h3>Новостная рассылка</h3>
 				<b>Email:</b><input type="email" name="yourEmail" />
 				<label><input type="submit" name="submitEmail" value="Подписаться" /></label>
 			</form>
-			<p>Станьте первыми из тех, кто узнает об интересный предложениях <br />
-			Подпишитесь на новостную рассылку сегодня!</p>
+			<p>Станьте первыми из тех, кто узнает об интересный предложениях</p>
+			<p>Подпишитесь на новостную рассылку сегодня!</p>
 		</article>
 		<address class="font-size-family-heaght">
 			<p class="address-font-size">© 2019 Example Home. Все права защищены. По вопросам обращайтесь по адресу <a href="#">info@example.com</a>.</p>
 		</address>
 	</footer>
+	
 </body>
 </html>
